--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,3 +1,5 @@
+@import "@/styles/varible";
+
 /* poppins-regular - latin */
 @font-face {
   font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
@@ -105,6 +107,7 @@ ol {
 body {
   font-family: Inter, sans-serif;
   font-size: 25px;
+  color: $main-text-color;
 
   background-color: #f2f2f2;
 }
