--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -2,8 +2,12 @@
   display: flex;
 
   height: 100vh;
-  max-height: 100vh;
   width: 100%;
+
+  min-width: 1200px;
+  max-width: 1440px;
+
+  margin: 0 auto;
 
   //overflow: hidden;
 }
