--- a/src/components/layout/sidebar/sidebar.module.scss
+++ b/src/components/layout/sidebar/sidebar.module.scss
@@ -36,7 +36,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: start;
+    justify-content: flex-start;
     width: 100%;
     height: 100%;
 
@@ -52,9 +52,7 @@
   &_itemMenu {
     height: 58px;
     width: 100%;
-    //display: flex;
-    //justify-content: left;
-    //align-items: center;
+
     padding: 20px;
     cursor: pointer;
 
