--- a/src/components/ui/home/ad/ad.module.scss
+++ b/src/components/ui/home/ad/ad.module.scss
@@ -1,3 +1,24 @@
+@import "@/styles/varible";
+
 .ad {
   flex: 1;
+  margin-right: 40px;
+
+  &_sliderWrapper {
+    margin-top: 30px;
+    border-radius: 50px;
+    padding: 50px 15px;
+    overflow: hidden;
+
+    border: 17px solid $background-body;
+    box-shadow:
+      rgb(220, 223, 227) 3px 3px 6px 0 inset,
+      rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset,
+      rgba(50, 50, 93, 0.25) 0 13px 27px -5px,
+      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  }
+
+  &_widgetWrapper {
+    margin-top: 40px;
+  }
 }
