--- a/src/components/ui/home/list-subjects/list-subjects.module.scss
+++ b/src/components/ui/home/list-subjects/list-subjects.module.scss
@@ -3,6 +3,7 @@
 .listSubjects {
   width: 444px;
   height: 100%;
+  position: relative;
 
   &_title {
     font-size: 18px;
@@ -22,10 +23,24 @@
     overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
+
+    transition-property: visibility, opacity, transform;
+    transition-duration: 1500ms;
+    transition-timing-function: ease;
   }
 
   &_list::-webkit-scrollbar {
     width: 0;
+  }
+
+  &_list.active {
+    transform: translateY(120%);
+    opacity: 0;
+    visibility: hidden;
+
+    > li {
+      margin-bottom: 70px;
+    }
   }
 
   &_item {
@@ -48,6 +63,8 @@
       -4px -4px 20px 0px rgba(255, 255, 255, 0.7) inset,
       0px 4px 6px 0px rgba(202, 202, 202, 0.48),
       -4px -4px 14px 0px rgba(255, 255, 255, 0.7);
+
+    transition: margin-bottom 1050ms ease;
 
     &:not(:last-child) {
       margin-bottom: 10px;
