--- a/src/components/ui/home/list-subjects/info-subject/info-subject.module.scss
+++ b/src/components/ui/home/list-subjects/info-subject/info-subject.module.scss
@@ -5,17 +5,19 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+
+  padding: 0 10px;
 
   display: flex;
   flex-direction: column;
 
   opacity: 0;
   visibility: hidden;
+  z-index: 50;
 
   transition-timing-function: ease;
   transition-property: visibility, opacity;
-  transition-duration: 550ms;
+  transition-duration: 650ms;
 
   background-color: $background-body;
 
@@ -53,7 +55,6 @@
   }
 
   &_wrapper {
-    margin-left: 20px;
     width: 100%;
     padding: 25px;
     border-radius: 50px;
