--- a/src/components/ui/home/list-subjects/list-subjects.module.scss
+++ b/src/components/ui/home/list-subjects/list-subjects.module.scss
@@ -2,8 +2,9 @@
 
 .listSubjects {
   width: 444px;
-  height: 100%;
   position: relative;
+  margin-bottom: 25px;
+  overflow: hidden;
 
   &_title {
     font-size: 18px;
@@ -14,13 +15,13 @@
   &_list {
     width: 100%;
     cursor: pointer;
+    position: initial;
+    z-index: 1;
 
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    height: calc(100vh - 220px);
 
-    overflow-y: scroll;
     -ms-overflow-style: none;
     scrollbar-width: none;
 
@@ -37,6 +38,9 @@
     transform: translateY(120%);
     opacity: 0;
     visibility: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
 
     > li {
       margin-bottom: 70px;
