--- a/src/components/screens/home/home.module.scss
+++ b/src/components/screens/home/home.module.scss
@@ -2,15 +2,19 @@
 
 .home {
   height: 100%;
+  width: 100%;
 
   display: flex;
   flex-direction: column;
 
   &_title {
     @include section-title-text;
+    line-height: 1;
   }
 
   &_wrapper {
+    flex: 1;
+
     display: flex;
   }
 }
