--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -106,7 +106,8 @@ ol {
 
 body {
   font-family: Inter, sans-serif;
-  font-size: 25px;
+  font-size: 16px;
+  font-weight: 400;
   color: $main-text-color;
 
   background-color: #f2f2f2;
