--- a/src/components/layout/header/header.module.scss
+++ b/src/components/layout/header/header.module.scss
@@ -2,14 +2,12 @@
 
 .header {
   width: 100%;
-  padding: 47px 34px 25px 34px;
-  position: sticky;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  background-color: $background-body;
+  padding: 0 34px;
 
   &_inner {
+    padding-top: 25px;
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -17,7 +15,7 @@
 
   &_userName {
     > p {
-      font-size: 24px;
+      font-size: $subtitle-upper-size;
       font-family: Poppins, sans-serif;
       font-weight: 500;
       line-height: 1.3;
