--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -4,27 +4,25 @@
   height: 100vh;
   width: 100%;
 
-  min-width: 1200px;
-  max-width: 1440px;
+  max-width: 1920px;
 
   margin: 0 auto;
 
-  overflow: hidden;
+  //overflow: hidden;
 }
 
 .layout_wrapperMain {
   flex: 1;
   height: 100vh;
 
-  overflow-y: scroll;
+  position: relative;
 
   display: flex;
   flex-direction: column;
-
-  position: relative;
 }
 
 .layout_wrapperChild {
   flex: 1;
+
   padding: 0 34px;
 }
