--- a/src/components/ui/home/ad/ad-slider/ad-slider.module.scss
+++ b/src/components/ui/home/ad/ad-slider/ad-slider.module.scss
@@ -1,8 +1,55 @@
+@import "@/styles/varible";
+
 .adSlider {
-  //padding: 50px 15px;
-  //border-radius: 50px;
-  //overflow: hidden;
-  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+
+  &_innerGrid {
+    position: relative;
+    max-width: 900px;
+    padding: 15px;
+    margin: 0 auto;
+  }
+
+  &_innerGrid:after {
+    box-sizing: border-box;
+    position: absolute;
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    z-index: 40;
+    top: 0;
+    left: 0;
+
+    border-radius: 50px;
+    border: 17px solid $background-body;
+    box-shadow:
+      rgb(220, 223, 227) 3px 3px 6px 0 inset,
+      rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset,
+      rgba(50, 50, 93, 0.25) 0 13px 27px -5px,
+      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
+  }
+
+  &_carouselWrap {
+    position: relative;
+    width: 100%;
+
+    overflow: hidden;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  &_carouselWrap:before {
+    content: "";
+    display: block;
+    padding-top: 56%;
+  }
 
   &__item {
   }
