--- a/src/components/ui/home/ad/ad.module.scss
+++ b/src/components/ui/home/ad/ad.module.scss
@@ -2,23 +2,29 @@
 
 .ad {
   flex: 1;
-  margin-right: 40px;
+  margin-top: 10px;
+  padding-right: 40px;
+  padding-left: 34px;
+  margin-left: -34px;
+
+  max-height: calc(100vh - 120px);
+  overflow-y: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+
+  display: grid;
+  grid-template-rows: 2ft 1ft;
+
+  &::-webkit-scrollbar {
+    width: 0;
+  }
 
   &_sliderWrapper {
     margin-top: 30px;
-    padding: 50px 15px;
-    overflow: hidden;
-
-    border-radius: 50px;
-    border: 17px solid $background-body;
-    box-shadow:
-      rgb(220, 223, 227) 3px 3px 6px 0 inset,
-      rgba(255, 255, 255, 0.5) -3px -3px 6px 1px inset,
-      rgba(50, 50, 93, 0.25) 0 13px 27px -5px,
-      rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
   }
 
   &_widgetWrapper {
-    margin-top: 40px;
+    margin-top: 20px;
+    margin-bottom: 20px;
   }
 }
