--- a/src/components/ui/home/list-subjects/list-subjects.module.scss
+++ b/src/components/ui/home/list-subjects/list-subjects.module.scss
@@ -3,8 +3,16 @@
 .listSubjects {
   width: 444px;
   position: relative;
-  margin-bottom: 25px;
+
   overflow: hidden;
+  max-height: calc(100vh - 130px);
+
+  display: flex;
+  flex-direction: column;
+
+  @media screen and (max-width: 1439px) {
+    width: 350px;
+  }
 
   &_title {
     font-size: 18px;
@@ -13,10 +21,12 @@
   }
 
   &_list {
-    width: 100%;
-    cursor: pointer;
+    flex: 1;
+    overflow-y: scroll;
+
     position: initial;
     z-index: 1;
+    padding: 3px;
 
     display: flex;
     flex-direction: column;
@@ -49,8 +59,7 @@
 
   &_item {
     width: 100%;
-    display: flex;
-    align-items: center;
+    cursor: pointer;
     padding: 15px 20px;
     border-radius: 16px;
     border: 1px solid transparent;
@@ -75,6 +84,13 @@
     }
   }
 
+  &_itemWrapp {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+  }
+
   &_itemWrapperImg {
     display: flex;
     justify-content: center;
@@ -84,7 +100,7 @@
     height: 56px;
     border-radius: 16px;
 
-    background-color: $background-icon;
+    background-color: $background-item;
   }
 
   &_itemImg {
