--- a/src/styles/varible.scss
+++ b/src/styles/varible.scss
@@ -43,4 +43,5 @@ $title-weight: 600;
   font-family: Poppins, sans-serif;
   font-size: $title-upper-size;
   font-weight: 600;
+  line-height: 1.1;
 }
