--- a/src/components/layout/sidebar/sidebar.module.scss
+++ b/src/components/layout/sidebar/sidebar.module.scss
@@ -53,7 +53,7 @@
     height: 58px;
     width: 100%;
 
-    padding: 20px;
+    padding: 0 20px;
     cursor: pointer;
 
     font-size: $text-upper-size;
