--- a/src/components/ui/home/ad/home-widget/home-widget.module.scss
+++ b/src/components/ui/home/ad/home-widget/home-widget.module.scss
@@ -8,6 +8,13 @@
   min-height: 180px;
   height: 100%;
 
+  &_flex {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: flex-end;
+  }
+
   &_itemOption {
     font-size: 25px;
     color: $second-text-color;
