--- a/src/components/ui/home/ad/ad-slider/ad-slider.module.scss
+++ b/src/components/ui/home/ad/ad-slider/ad-slider.module.scss
@@ -24,6 +24,7 @@
     z-index: 40;
     top: 0;
     left: 0;
+    pointer-events: none;
 
     border-radius: 50px;
     border: 17px solid $background-body;
