--- a/src/components/screens/conference/by-id/conference-id.module.scss
+++ b/src/components/screens/conference/by-id/conference-id.module.scss
@@ -81,6 +81,10 @@
     z-index: 15;
   }
 
+  &_video.disable {
+    display: none;
+  }
+
   &_nameWrapper {
     position: absolute;
     width: 100%;
