--- a/src/components/ui/home/ad/ad.module.scss
+++ b/src/components/ui/home/ad/ad.module.scss
@@ -2,25 +2,25 @@
 
 .ad {
   flex: 1;
-  margin-top: 10px;
+  margin-top: 20px;
   padding-right: 40px;
   padding-left: 34px;
   margin-left: -34px;
 
   max-height: calc(100vh - 120px);
+
   overflow-y: scroll;
   -ms-overflow-style: none;
   scrollbar-width: none;
 
   display: grid;
-  grid-template-rows: 2ft 1ft;
+  grid-template-rows: 1fr 200px;
 
   &::-webkit-scrollbar {
     width: 0;
   }
 
   &_sliderWrapper {
-    margin-top: 30px;
   }
 
   &_widgetWrapper {
