--- a/src/components/ui/home/ad/home-widget/home-widget.module.scss
+++ b/src/components/ui/home/ad/home-widget/home-widget.module.scss
@@ -1,18 +1,23 @@
 @import "@/styles/varible";
 
 .homeWidget {
-  display: flex;
-  gap: 20px;
-
-  max-height: 200px;
-  min-height: 180px;
-  height: 100%;
-
   &_flex {
     width: 100%;
     height: 100%;
     display: flex;
-    align-items: flex-end;
+    align-items: center;
+  }
+
+  &_list {
+    display: flex;
+    gap: 20px;
+
+    max-height: 200px;
+    min-height: 180px;
+
+    @media screen and (max-width: 1439px) {
+      gap: 10px;
+    }
   }
 
   &_itemOption {
@@ -52,6 +57,10 @@
     @include overflow-text(1);
     margin-bottom: 8px;
     padding-right: 30px;
+
+    @media screen and (max-width: 1439px) {
+      font-size: 14px;
+    }
   }
 
   &_itemText {
@@ -59,6 +68,10 @@
     font-size: $subtitle-lower-size;
     color: $second-text-color;
     @include overflow-text(3);
+
+    @media screen and (max-width: 1439px) {
+      font-size: 14px;
+    }
   }
 
   &_itemBottomWrapper {
@@ -67,6 +80,7 @@
     align-items: center;
     width: 100%;
     margin-top: auto;
+    position: relative;
   }
 
   &_itemUserList {
@@ -98,6 +112,10 @@
   }
 
   &_itemNotice {
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
     width: 24px;
     height: 24px;
     font-weight: 600;
