--- a/src/components/screens/auth/form/sing-in-form.module.scss
+++ b/src/components/screens/auth/form/sing-in-form.module.scss
@@ -52,7 +52,13 @@
     background-color: $background-item;
     color: $light-text-color;
     font-size: 25px;
-    padding: 10px 50px;
+    width: 170px;
+    height: 50px;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
     border-radius: 50px;
     border: none;
     cursor: pointer;
