--- a/src/components/layout/sidebar/sidebar.module.scss
+++ b/src/components/layout/sidebar/sidebar.module.scss
@@ -1,15 +1,40 @@
 @import "@/styles/varible";
 
 .aside {
-  width: 280px;
-  border-right: 1px solid #e4e4e4;
-  height: 100%;
+  display: block;
+  width: 70px;
+  height: 100vh;
+  position: relative;
 
-  display: flex;
-  flex-direction: column;
+  &.active {
+    width: 280px;
+  }
 
-  @media screen and (max-width: 1279px) and (min-width: 768px) {
+  //@media screen and (max-width: 1279px) and (min-width: 768px) {
+  //  width: 70px;
+  //  &.active {
+  //    width: 70px;
+  //  }
+  //}
+
+  &_inner {
+    position: absolute;
+    top: 0;
+    left: 0;
     width: 70px;
+    border-right: 1px solid #e4e4e4;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+
+    transition: width 350ms ease;
+    z-index: 50;
+    background-color: $background-body;
+  }
+  &_inner.active,
+  &_inner:hover {
+    width: 280px;
   }
 
   &_wrapperLogo {
@@ -28,24 +53,27 @@
     font-size: 32px;
     font-family: Poppins, sans-serif;
     font-weight: $title-weight;
+    display: none;
 
     > span {
       color: $accent-color;
     }
+  }
 
-    @media screen and (max-width: 1279px) and (min-width: 768px) {
-      display: none;
-    }
+  &_inner:hover &_logo,
+  &_inner.active &_logo {
+    display: initial;
   }
 
   &_logoV2 {
-    display: none;
     width: 50px;
     height: auto;
+    display: block;
+  }
 
-    @media screen and (max-width: 1279px) and (min-width: 768px) {
-      display: block;
-    }
+  &_inner:hover &_logoV2,
+  &_inner.active &_logoV2 {
+    display: none;
   }
 
   &_listMenuWrapper {
@@ -130,10 +158,15 @@
     font-size: $text-upper-size;
     font-weight: 600;
     line-height: 1.4;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 100ms ease 300ms;
+  }
 
-    @media screen and (max-width: 1279px) and (min-width: 768px) {
-      display: none;
-    }
+  &_inner:hover &_linkText,
+  &_inner.active &_linkText {
+    visibility: visible;
+    opacity: 1;
   }
 
   &_wrapperUser {
@@ -157,14 +190,19 @@
   }
 
   &_wrapperUserName {
-    display: flex;
     flex-direction: column;
     flex: 1;
     padding: 0 5px 0 10px;
+    visibility: hidden;
+    opacity: 0;
+    transition: opacity 100ms ease 300ms;
+  }
 
-    @media screen and (max-width: 1279px) and (min-width: 768px) {
-      display: none;
-    }
+  &_inner:hover &_wrapperUserName,
+  &_inner.active &_wrapperUserName {
+    display: flex;
+    visibility: visible;
+    opacity: 1;
   }
 
   &_userName {
@@ -185,14 +223,15 @@
   }
 
   &_wrapperChangeIcon {
-    display: flex;
+    display: none;
     justify-content: center;
     align-items: center;
 
     cursor: pointer;
+  }
 
-    @media screen and (max-width: 1279px) and (min-width: 768px) {
-      display: none;
-    }
+  &_inner:hover &_wrapperChangeIcon,
+  &_inner.active &_wrapperChangeIcon {
+    display: flex;
   }
 }
