--- a/src/components/screens/home/home.module.scss
+++ b/src/components/screens/home/home.module.scss
@@ -8,7 +8,10 @@
   flex-direction: column;
 
   &_title {
-    @include section-title-text;
+    font-family: Poppins, sans-serif;
+    font-size: $title-upper-size;
+    font-weight: 600;
+    line-height: 1.1;
   }
 
   &_wrapper {
