--- a/src/components/screens/schedule/schedule.module.scss
+++ b/src/components/screens/schedule/schedule.module.scss
@@ -7,6 +7,12 @@
   display: flex;
   flex-direction: column;
 
+  &_titleWrapper {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+  }
+
   &_title {
     @include section-title-text;
   }
@@ -20,9 +26,6 @@
     margin-top: 15px;
   }
 
-  &_selectWrapper {
-  }
-
   &_container {
     flex: 1;
 
@@ -30,7 +33,7 @@
     box-shadow:
       8px 8px 10px rgba(204, 204, 204, 0.3),
       -8px -8px 10px #fff;
-    margin: 20px 0;
+    margin-bottom: 20px;
     border-radius: 50px;
     border: 5px solid transparent;
     padding: 10px;
@@ -51,7 +54,7 @@
     }
 
     &.infoDesktop {
-      width: 300px;
+      width: 350px;
       margin-left: 10px;
       padding: 30px;
       position: relative;
