--- a/src/styles/varible.scss
+++ b/src/styles/varible.scss
@@ -41,7 +41,7 @@ $title-weight: 600;
 
 @mixin section-title-text {
   font-family: Poppins, sans-serif;
-  font-size: $title-upper-size;
+  font-size: $title-lower-size;
   font-weight: 600;
   line-height: 1.1;
 }
