--- a/src/components/ui/lists/lists-list/lists-list.module.scss
+++ b/src/components/ui/lists/lists-list/lists-list.module.scss
@@ -1,8 +1,10 @@
 @import "@/styles/varible";
 
 .list {
+  flex: 1;
   display: flex;
   flex-direction: column;
+  overflow-y: scroll;
 
   &_item {
     display: flex;
