--- a/src/components/ui/home/ad/home-widget/home-widget.module.scss
+++ b/src/components/ui/home/ad/home-widget/home-widget.module.scss
@@ -9,6 +9,7 @@
   }
 
   &_list {
+    width: 100%;
     display: flex;
     gap: 20px;
 
@@ -20,111 +21,94 @@
     }
   }
 
-  &_itemOption {
-    font-size: 25px;
-    color: $second-text-color;
-    position: absolute;
-    right: 20px;
-    top: 10px;
+  &_item {
+    width: 33.333%;
+
+    &.add1 {
+      width: 33.3333%;
+    }
+
+    &.add2 {
+      flex: 1;
+    }
   }
 
-  &_item {
-    flex: 1;
-    border-radius: 24px;
-    padding: 24px 20px;
-    position: relative;
+  &_itemInner {
+    width: 100%;
+    height: 100%;
     cursor: pointer;
 
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
+    position: relative;
 
-    border: 1px solid transparent;
-    background:
-      linear-gradient($background-body, $background-body) padding-box,
-      linear-gradient(
-          180deg,
-          rgba(208, 208, 208, 1) 0%,
-          rgba(255, 255, 255, 1) 100%
-        )
-        border-box;
-    box-shadow: rgba(100, 100, 111, 0.2) 0 7px 29px 0;
+    border-radius: 24px;
+    border: 1px solid #fff;
+    background: #ededed;
+    box-shadow:
+      4px 4px 25px 0 rgba(160, 160, 160, 0.5),
+      -4px -4px 25px 0px #fff,
+      4px 4px 35px 0px #fff inset;
   }
 
-  &_itemTitle {
-    font-size: $text-upper-size;
-    font-weight: 600;
-    @include overflow-text(1);
-    margin-bottom: 8px;
-    padding-right: 30px;
-
-    @media screen and (max-width: 1439px) {
-      font-size: 14px;
-    }
+  &_itemInner:hover &_itemAddBtn:before,
+  &_itemInner:hover &_itemAddBtn:after {
+    background-color: $background-item;
   }
 
-  &_itemText {
-    font-weight: 600;
-    font-size: $subtitle-lower-size;
+  &_option {
+    font-size: 25px;
     color: $second-text-color;
-    @include overflow-text(3);
 
-    @media screen and (max-width: 1439px) {
-      font-size: 14px;
+    position: absolute;
+    right: 10px;
+    top: 0;
+    z-index: 10;
+
+    padding: 0 5px 5px 5px;
+
+    transition: color 350ms ease;
+
+    &:hover {
+      color: $background-item;
     }
   }
 
-  &_itemBottomWrapper {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 100%;
-    margin-top: auto;
-    position: relative;
-  }
-
-  &_itemUserList {
-    display: flex;
-    position: relative;
-    flex: 1;
-  }
-
-  &_itemUserItem {
-    width: 24px;
-    height: 24px;
-  }
-  &_itemUserItem:nth-child(2) {
-    transform: translateX(-12px);
-  }
-  &_itemUserItem:nth-child(3) {
-    transform: translateX(-24px);
-  }
-  &_itemUserItem:nth-child(4) {
-    transform: translateX(-36px);
-  }
-  &_itemUserItem:nth-child(5) {
-    transform: translateX(-48px);
-  }
-
-  &_itemUserImg {
-    width: 24px;
-    height: 24px;
-  }
-
-  &_itemNotice {
+  &_optionBtn {
     position: absolute;
-    right: 0;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 24px;
-    height: 24px;
+    cursor: pointer;
+
+    top: 10px;
+    right: 10px;
+    z-index: 105;
+
+    padding: 5px 10px;
+    border-radius: 10px;
+    border: none;
+
+    font-size: 14px;
     font-weight: 600;
-    font-size: 10px;
+
+    color: $light-text-color;
+    background-color: $accent-color;
+    transition: background-color 350ms ease;
+
+    box-shadow:
+      rgba(60, 64, 67, 0.3) 0 1px 2px 0,
+      rgba(60, 64, 67, 0.15) 0 2px 6px 2px;
+
+    &:hover {
+      background-color: $background-item;
+    }
+  }
+
+  &_itemAdd {
+    width: 100%;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: $accent-color;
-    border-radius: 50%;
-    color: $light-text-color;
+  }
+
+  &_itemAddBtn {
+    @include plus-button;
   }
 }
