--- a/src/components/layout/sidebar/sidebar-skeleton/sidebar-skeleton.module.scss
+++ b/src/components/layout/sidebar/sidebar-skeleton/sidebar-skeleton.module.scss
@@ -34,7 +34,7 @@
 
     &_text {
       color: $second-text-color;
-      font-size: $text-lower-size;
+      font-size: $font-size-sm;
     }
   }
 }
