--- a/src/components/ui/in-develop/in-develop.module.scss
+++ b/src/components/ui/in-develop/in-develop.module.scss
@@ -9,7 +9,7 @@
   min-height: 320px;
 
   &_text {
-    font-size: $subtitle-upper-size;
+    font-size: $font-size-xl;
     font-weight: 600;
 
     svg {
