--- a/src/components/ui/schedule/table-week/item-day/week-item-day.module.scss
+++ b/src/components/ui/schedule/table-week/item-day/week-item-day.module.scss
@@ -28,7 +28,7 @@
   }
 
   &_title {
-    font-size: $subtitle-upper-size;
+    font-size: $font-size-xl;
     font-weight: $title-weight;
     margin-bottom: 5px;
   }
@@ -36,14 +36,14 @@
   &_countLesson {
     font-weight: $title-weight;
     line-height: 1.3;
-    font-size: $subtitle-lower-size;
+    font-size: $font-size-md;
     color: $second-text-color;
     text-indent: 20px;
   }
 
   &_listLesson {
     color: $second-text-color;
-    font-size: $text-upper-size;
+    font-size: $font-size-md;
   }
 
   &_ItemLesson {
