--- a/src/styles/varible.scss
+++ b/src/styles/varible.scss
@@ -42,7 +42,7 @@ $title-weight: 600;
   line-height: 1.1;
 }
 
-//create button
+//create button styles
 @mixin plus-button {
   width: 40px;
   height: 40px;
