--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -125,3 +125,9 @@ body {
 *::-webkit-scrollbar-track {
   background: transparent;
 }
+button{
+  border: none;
+  padding: 0;
+  margin: 0;
+  background: none;
+}
