--- a/src/components/screens/courses/bars/bar.module.scss
+++ b/src/components/screens/courses/bars/bar.module.scss
@@ -24,9 +24,10 @@
     background: #FFF;
     display: flex;
     color:#808191;
-    gap: 40px;
     margin-top: 26px;
     > button {
+        display: flex; 
+        gap: 8px;
         color: #808191;
         font-weight: 600;
         line-height: 24px; 
@@ -38,6 +39,9 @@
             background: #F3F3F3;
             box-shadow: 0px 0px 8px 0px rgba(67, 67, 67, 0.25) inset;
         }
+    }
+    > img {
+        margin-left: 20px;
     }
 }
 
