--- a/src/components/ui/courses/card/testCard/TestCard.module.scss
+++ b/src/components/ui/courses/card/testCard/TestCard.module.scss
@@ -1,16 +1,18 @@
+@import '@/styles/varible';
+
 .cardTop{
     display: flex;
     
 }
 .cardTitle{
-    color: #438CED;
+    color: $background-item;
     font-size: 18px;
     font-weight: 600;
     margin-bottom: 5px;
 }
 .title{
-    color: #808191;
-    font-size: 20px;
+    color: $second-text-color;
+    font-size: $font-size-lg;
     font-weight: 600;
 }
 .cardImg{
@@ -20,9 +22,9 @@
 .descriptions{
     max-width: 100%;
     width: 323px;
-    color: #808191;
-    font-family: 'Poppins';
-    font-size: 14px;
+    color: $second-text-color;
+    font-family: 'Poppins', sans-serif;
+    font-size: $font-size-sm;
 }
 .cardWrapper{
     width: 100%;
@@ -34,7 +36,7 @@
     padding-left: 12px;
     gap: 31px 34px;
     border-radius: 24px;
-    border: 1px solid #FFF;
+    border: 1px solid $light-text-color;
     background: #EDEDED;
-    box-shadow: 4px 4px 25px 0px rgba(160, 160, 160, 0.50), -4px -4px 25px 0px #FFF, 4px 4px 35px 0px #FFF inset;
+    box-shadow: 4px 4px 25px 0px rgba(160, 160, 160, 0.50), -4px -4px 25px 0px $light-text-color, 4px 4px 35px 0px $light-text-color inset;
 }
