--- a/src/styles/varible.scss
+++ b/src/styles/varible.scss
@@ -9,6 +9,7 @@ $dark-text-color: #000000;
 
 //ui
 $background-body: #f2f2f2;
+$background-option:#EDEDED;
 $accent-color: #ff754c;
 $background-item: #438ced;
 
