--- a/src/components/ui/courses/card/CourseItem/card.module.scss
+++ b/src/components/ui/courses/card/CourseItem/card.module.scss
@@ -63,26 +63,47 @@
     background: $light-text-color;
     padding: 10px 0;
 }
-.barWrapper{
+.subtitleWrapper{
     display: flex;
-    align-items: center;
-    gap: 5px;
+    align-items:center;
+    margin-top: 8px;
+    gap: 9px;
+    > li { 
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        padding: 9px 6px;
+        background-color: $light-text-color;
+        border-radius: 50%;
+            > svg{
+                width: 28px;
+                height: 22px;
+                
+            }
+        }
+}
+
+.barWrapper {
+    display: flex;
+    gap:20px;
     padding-bottom:7px;
     border-bottom: 1px solid $light-text-color;
-    font-family: 'Poppins', sans-serif;
-
-    svg{
-        &:first-child{
-            width: 34px;
-            height: 34px;
-        }
-        &:last-child{ 
-            width: 34px;
-            height: 34px;
-            margin-left: 17px;
-            margin-right: 10px;
+    >li{
+        display: flex;
+        align-items: center;
+        >svg {
+            width:34px;
+            height:34px;
+            margin-right: 7px;
+            
+            &:first-child{
+                width:46px;
+                margin-right: 12px;
+            }
+           
         }
     }
+   
 }
 .descriptions{
     color: $second-text-color;
