--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -125,9 +125,10 @@ body {
 *::-webkit-scrollbar-track {
   background: transparent;
 }
-button{
+button {
   border: none;
   padding: 0;
   margin: 0;
   background: none;
+  cursor: pointer;
 }
