--- a/src/components/ui/profile/bars/addBlock/second/addBlockSecond.module.scss
+++ b/src/components/ui/profile/bars/addBlock/second/addBlockSecond.module.scss
@@ -1,9 +1,9 @@
 .addWrapper {
   width: 100%;
+  max-width: 275px;
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 800px;
   height: 200px;
   border-radius: 24px;
   border: 1px solid #fff;
@@ -12,7 +12,9 @@
     4px 4px 25px 0 rgba(160, 160, 160, 0.5),
     -4px -4px 25px 0px #fff,
     4px 4px 35px 0px #fff inset;
+  margin-top: 27px;
 }
+
 .btnAdd {
   > svg {
     width: 40px;
