--- a/src/components/ui/profile/bars/skills/languages/language.module.scss
+++ b/src/components/ui/profile/bars/skills/languages/language.module.scss
@@ -1,17 +1,51 @@
 .menuList {
-  display: flex;
-  gap: 20px;
   width: 100%;
-  max-width: 365px;
+  max-width: 440px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+
   > li {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    text-align: center;
     color: #11142d;
     font-size: 16px;
     font-weight: 600;
     border-radius: 20px;
     background: #fff;
-    margin-left: 20px;
+    padding: 7px 21px;
   }
+}
+.addList {
+  > svg {
+    width: 35px;
+    height: 35px;
+  }
+}
+.rate {
+  margin-bottom: 30px;
+
+  > h2 {
+    color: #11142d;
+    font-size: 22px;
+    font-weight: 600;
+    margin-top: 10px;
+    margin-bottom: 10px;
+  }
+  > p {
+    width: 100%;
+    max-width: 85px;
+    color: #438ced;
+    font-size: 20px;
+    font-weight: 600;
+    border-radius: 20px;
+    background: #fff;
+    padding: 9px 13px;
+  }
+}
+.title {
+  color: #11142d;
+  font-size: 22px;
+  font-weight: 600;
+  margin-bottom: 20px;
 }
