--- a/src/components/screens/profile/profile.module.scss
+++ b/src/components/screens/profile/profile.module.scss
@@ -1,22 +1,23 @@
 .main {
   overflow-y: auto;
   padding-right: 15px;
+  padding-bottom: 20px;
+  width: 100%;
 }
 .profileContainer {
+  width: 100%;
   display: flex;
-  justify-content: space-between;
+  gap: 50px;
 }
 .coursesBlock {
   width: 100%;
-  max-width: 1000px;
-  max-height: 325px;
+
   gap: 53px;
   display: flex;
-  justify-content: space-around;
   border-radius: 24px;
   border: 1px solid #fff;
   background: #ededed;
-  padding: 25px 165px 31px 26px;
+  padding: 25px;
   box-shadow:
     4px 4px 25px 0 rgba(160, 160, 160, 0.5),
     -4px -4px 25px 0px #fff,
