--- a/src/components/ui/courses/card/CourseItem/card.module.scss
+++ b/src/components/ui/courses/card/CourseItem/card.module.scss
@@ -11,7 +11,7 @@
     border-radius: 24px;
     border: 1px solid $light-text-color;
     background: $background-option;
-    box-shadow: 4px 4px 25px 0px rgba(160, 160, 160, 0.50), -4px -4px 25px 0px $light-text-color, 4px 4px 35px 0px $light-text-color inset;
+    box-shadow: 4px 4px 25px 0 rgba(160, 160, 160, 0.50), -4px -4px 25px 0px $light-text-color, 4px 4px 35px 0px $light-text-color inset;
     padding:23px 31px 22px 21px
 }
 .cardImg{
@@ -49,7 +49,7 @@
     height: 35px;
     color: $background-item;
     font-size: $font-size-lg;
-    font-weight: 600;
+    font-weight: $title-weight;
     border-radius: 30px;
     background: $light-text-color;
 }
@@ -58,7 +58,7 @@
     width: 100px;
     color: $background-item;
     font-size: $font-size-lg;
-    font-weight: 600;
+    font-weight:  $title-weight;
     border-radius: 30px;
     background: $light-text-color;
     padding: 10px 0;
