--- a/src/components/ui/courses/card/TestCard/TestCard.module.scss
+++ b/src/components/ui/courses/card/TestCard/TestCard.module.scss
@@ -2,18 +2,17 @@
 
 .cardTop{
     display: flex;
-    
 }
 .cardTitle{
     color: $background-item;
     font-size: 18px;
-    font-weight: 600;
+    font-weight: $title-weight;
     margin-bottom: 5px;
 }
 .title{
     color: $second-text-color;
     font-size: $font-size-lg;
-    font-weight: 600;
+    font-weight: $title-weight;
 }
 .cardImg{
     margin-right: 20px;
@@ -37,6 +36,6 @@
     gap: 31px 34px;
     border-radius: 24px;
     border: 1px solid $light-text-color;
-    background: #EDEDED;
-    box-shadow: 4px 4px 25px 0px rgba(160, 160, 160, 0.50), -4px -4px 25px 0px $light-text-color, 4px 4px 35px 0px $light-text-color inset;
+    background: $background-option;
+    box-shadow: 4px 4px 25px 0 rgba(160, 160, 160, 0.50), -4px -4px 25px 0px $light-text-color, 4px 4px 35px 0px $light-text-color inset;
 }
