--- a/src/components/ui/profile/bars/addBlock/second/addBlockSecond.module.scss
+++ b/src/components/ui/profile/bars/addBlock/second/addBlockSecond.module.scss
@@ -1,3 +1,5 @@
+@import '@/styles/varible';
+
 .addWrapper {
   width: 100%;
   max-width: 275px;
@@ -6,12 +8,12 @@
   align-items: center;
   height: 200px;
   border-radius: 24px;
-  border: 1px solid #fff;
-  background: #ededed;
+  border: 1px solid $light-text-color;
+  background: $background-option;
   box-shadow:
     4px 4px 25px 0 rgba(160, 160, 160, 0.5),
-    -4px -4px 25px 0px #fff,
-    4px 4px 35px 0px #fff inset;
+    -4px -4px 25px 0px $light-text-color,
+    4px 4px 35px 0px $light-text-color inset;
   margin-top: 27px;
 }
 
