--- a/src/components/ui/profile/bars/contatc-profile/contactList.module.scss
+++ b/src/components/ui/profile/bars/contatc-profile/contactList.module.scss
@@ -1,3 +1,5 @@
+@import '@/styles/varible';
+
 .listWrapper {
   display: flex;
   align-items: center;
@@ -7,12 +9,12 @@
   max-width: 275px;
   min-height: 325px;
   border-radius: 24px;
-  border: 1px solid #fff;
-  background: #ededed;
+  border: 1px solid $light-text-color;
+  background: $background-option;
   box-shadow:
     4px 4px 25px 0 rgba(160, 160, 160, 0.5),
-    -4px -4px 25px 0px #fff,
-    4px 4px 35px 0px #fff inset;
+    -4px -4px 25px 0px $light-text-color,
+    4px 4px 35px 0px $light-text-color inset;
   > ul {
     display: flex;
     flex-direction: column;
@@ -21,8 +23,8 @@
       display: flex;
       align-items: center;
       gap: 16px;
-      color: #11142d;
-      font-size: 16px;
+      color: $main-text-color;
+      font-size: $font-size-md;
       font-weight: 600;
     }
   }
@@ -31,7 +33,7 @@
 .settings {
   display: flex;
   align-items: center;
-  background-color: #ff754c;
+  background-color: $accent-color;
   position: absolute;
   padding: 9px;
   border-radius: 50%;
