--- a/src/styles/varible.scss
+++ b/src/styles/varible.scss
@@ -9,10 +9,11 @@ $dark-text-color: #000000;
 
 //ui
 $background-body: #f2f2f2;
+$background-body-option: #f3f3f3;
 $background-option:#EDEDED;
 $accent-color: #ff754c;
 $background-item: #438ced;
-
+$color-option:#e6e6e6;
 /*----- Font size -----*/
 
 $font-size-xl: 25px;
