--- a/src/components/ui/profile/bars/skills/achievements/achievement.module.scss
+++ b/src/components/ui/profile/bars/skills/achievements/achievement.module.scss
@@ -10,7 +10,7 @@
 .title {
   color: $main-text-color;
   font-size: 22px;
-  font-weight: 600;
+  font-weight: $title-weight;
   margin-bottom: 16px;
   margin-left: 17px;
 }
