--- a/src/components/ui/profile/bars/skills/languages/language.module.scss
+++ b/src/components/ui/profile/bars/skills/languages/language.module.scss
@@ -11,7 +11,7 @@
   > li {
     text-align: center;
     color: $main-text-color;
-    font-size: 16px;
+    font-size: $font-size-md;
     font-weight: 600;
     border-radius: 20px;
     background: $light-text-color;
@@ -30,7 +30,7 @@
   > h2 {
     color: $main-text-color;
     font-size: 22px;
-    font-weight: 600;
+    font-weight: $title-weight;
     margin-top: 10px;
     margin-bottom: 10px;
   }
@@ -39,15 +39,15 @@
     max-width: 85px;
     color: $background-item;
     font-size: 20px;
-    font-weight: 600;
+    font-weight: $title-weight;
     border-radius: 20px;
-    background: $background-body;
+    background: $light-text-color;
     padding: 9px 13px;
   }
 }
 .title {
   color: $main-text-color;
   font-size: 22px;
-  font-weight: 600;
+  font-weight: $title-weight;
   margin-bottom: 20px;
 }
