--- a/src/components/ui/courses/card/TestCard/TestCard.module.scss
+++ b/src/components/ui/courses/card/TestCard/TestCard.module.scss
@@ -19,8 +19,8 @@
 
 }
 .descriptions{
-    max-width: 100%;
-    width: 323px;
+    width: 100%;
+    max-width: 323px;
     color: $second-text-color;
     font-family: 'Poppins', sans-serif;
     font-size: $font-size-sm;
@@ -33,7 +33,7 @@
     padding-top: 18px;
     padding-bottom: 18px;
     padding-left: 12px;
-    gap: 31px 34px;
+    gap: 27px ;
     border-radius: 24px;
     border: 1px solid $light-text-color;
     background: $background-option;
