--- a/src/components/ui/profile/bars/addBlock/addBlock.module.scss
+++ b/src/components/ui/profile/bars/addBlock/addBlock.module.scss
@@ -5,7 +5,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  max-width: 1000px;
   height: 200px;
   border-radius: 24px;
   border: 1px solid $light-text-color;
@@ -17,8 +16,6 @@
   margin-top: 27px;
 }
 .btnAdd {
-  > svg {
-    width: 40px;
-    height: 40px;
-  }
+  @include plus-button;
+
 }
